[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum =  { version = "0.7.5", features = ["ws"]}
axum-extra = { features = ["typed-header", "typed-routing", "cookie"] }
axum-typed-websockets = "0.6.0"

tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "*", features = ["derive"] }
mongodb = "2.8.2"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
tower-http = { version = "0.5.2", features = ["trace", "cors"]}
trace = "0.1.7"
headers = "0.4.0"
futures = "0.3.30"
serde_json = "1.0.115"
axum-macros = "0.4.1"
tower = "0.4.13"
derive_more = { version = "0.99.17", features = ["from"] }
serde_with = "3.8.1"
